--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li class=""><a href="#">Projects</a></li>
             <li><a href="#">Photography</a></li>
+            <li><a href="#">Blog</a></li>
             <li><a href="#">About Me</a></li>
           </ul>
         </div>
@@ -47,6 +48,7 @@
       <div class="container text-center mainSectionButtons">
         <button class="btn btn-danger">Projects</button>
         <button class="btn btn-danger">Photography</button>
+        <button class="btn btn-danger">Blog</button>
         <button class="btn btn-danger">About Me</button>
       </div>
     </section>
@@ -88,10 +90,9 @@
       </div>
     </section>
 
-    <footer>
-      
+    <footer class="footer p-3">
+      <h3 class="footerText "> Ekrem Yılmaztürk &COPY 2024 </h3>
     </footer>
-
     
   </body>
 </html>
