--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li class=""><a href="#">Projects</a></li>
-            <li><a href="#">Photography</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">About Me</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="photography.html">Photography</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="about.html">About Me</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -46,10 +46,10 @@
     <!--**********Main************-->
     <section class="container-fluid d-flex align-items-center mainSection">
       <div class="container text-center mainSectionButtons">
-        <button class="btn btn-danger">Projects</button>
-        <button class="btn btn-danger">Photography</button>
-        <button class="btn btn-danger">Blog</button>
-        <button class="btn btn-danger">About Me</button>
+        <button class="btn btn-danger"><a href="photography.html" style="color: white; text-decoration: none;">Projects</a></button>
+        <button class="btn btn-danger"><a href="photography.html" style="color: white; text-decoration: none;">Photography</a></button>
+        <button class="btn btn-danger"><a href="photography.html" style="color: white; text-decoration: none;">Blog</a></button>
+        <button class="btn btn-danger"><a href="photography.html" style="color: white; text-decoration: none;">About Me</a></button>
       </div>
     </section>
     
