--- a/index.html
+++ b/index.html
@@ -44,14 +44,24 @@
       <!-- /.container-fluid -->
     </nav>
     <!--**********Main************-->
-    <section class="container-fluid d-flex align-items-center mainSection">
-      <div class="container text-center mainSectionButtons">
-        <button class="btn btn-danger"><a href="projects.html" style="color: white; text-decoration: none;">Projects</a></button>
-        <button class="btn btn-danger"><a href="photography.html" style="color: white; text-decoration: none;">Photography</a></button>
-        <button class="btn btn-danger"><a href="blog.html" style="color: white; text-decoration: none;">Blog</a></button>
-        <button class="btn btn-danger"><a href="about.html" style="color: white; text-decoration: none;">About Me</a></button>
+    <div class="container text-center mainSectionButtons mainSection">
+      <div class="row">
+        <div class="col-md-6 text-md-right mb-2">
+          <button class="btn btn-success"><a href="photography.html" style="font-size: 25px; color: white; text-decoration: none;">Projects</a></button>
+        </div>
+        <div class="col-md-6 text-md-left mb-2">
+          <button class="btn btn-success "><a href="photography.html" style="font-size: 25px; color: white; text-decoration: none;">Photography</a></button>
+        </div>
       </div>
-    </section>
+      <div class="row">
+        <div class="col-md-6 text-md-right mb-2">
+          <button class="btn btn-success"><a href="photography.html" style="font-size: 25px; color: white; text-decoration: none;">Blog</a></button>
+        </div>
+        <div class="col-md-6 text-md-left mb-2">
+          <button class="btn btn-success"><a href="photography.html" style="font-size: 25px ; color: white; text-decoration: none;">About Me</a></button>
+        </div>
+      </div>
+    </div>
     
     <!--**********Accounts Section************-->
     <section id="accounts" class="container text-center">
