--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="container text-center mainSectionButtons mainSection">
       <div class="row">
         <div class="col-md-6 text-md-right mb-2">
-          <button class="btn btn-success"><a href="photography.html" style="font-size: 25px; color: white; text-decoration: none;">Projects</a></button>
+          <button class="btn btn-success"><a href="projects.html" style="font-size: 25px; color: white; text-decoration: none;">Projects</a></button>
         </div>
         <div class="col-md-6 text-md-left mb-2">
           <button class="btn btn-success "><a href="photography.html" style="font-size: 25px; color: white; text-decoration: none;">Photography</a></button>
@@ -55,10 +55,10 @@
       </div>
       <div class="row">
         <div class="col-md-6 text-md-right mb-2">
-          <button class="btn btn-success"><a href="photography.html" style="font-size: 25px; color: white; text-decoration: none;">Blog</a></button>
+          <button class="btn btn-success"><a href="blog.html" style="font-size: 25px; color: white; text-decoration: none;">Blog</a></button>
         </div>
         <div class="col-md-6 text-md-left mb-2">
-          <button class="btn btn-success"><a href="photography.html" style="font-size: 25px ; color: white; text-decoration: none;">About Me</a></button>
+          <button class="btn btn-success"><a href="about.html" style="font-size: 25px ; color: white; text-decoration: none;">About Me</a></button>
         </div>
       </div>
     </div>
