--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Projects</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/styleprojects.css" />
+    <title>Projects</title>
+  </head>
+  <section class="light">
+    <div class="container py-2">
+      <div class="h1 text-center text-dark" id="pageHeaderTitle">
+        Last 4 Projects
+      </div>
+
+      <article class="postcard light blue">
+        <a class="postcard__img_link" href="./assets/stock app.gif">
+          <img
+            class="postcard__img"
+            src="./assets/stock app.gif"
+            alt="e-com king"
+          />
+        </a>
+        <div class="postcard__text t-dark">
+          <a
+            href="https://ekrem18-e-com-king-stock-app-frontend-for-dev.vercel.app/ "
+            ><h1 class="postcard__title blue">e-com King</h1></a
+          >
+          <div class="postcard__subtitle small">MERN Stack</div>
+          <div class="postcard__bar"></div>
+          <div class="postcard__preview-txt">
+            📌The backend and frontend parts of this project have been developed
+            by me and the project can be described as an admin panel intended
+            for e-commerce use. It is built upon 8 different models. 📌As a
+            seller, you can create an account, make purchases and sales from
+            registered companies, brands, and products. You can also have
+            real-time visibility into stock tracking. 📌JWT is used for
+            encryption. 📌A permission system is established for
+            editing/changing something about system. 📌Logging is implemented.
+            📌If you want to read the API documentation and check the structure,
+            Swagger and Redoc documents are also available. To access them, you
+            can follow the '/redoc' or '/swagger' routes. 📌The profit and loss
+            statement seen on the homepage dynamically changes based on the
+            current information received from the backend, and it is not static.
+            📌The logo has been designed by me using Photoshop.
+          </div>
+          <ul class="postcard__tagbox">
+            <a
+              href="https://github.com/ekrem18/e-com-King-StockApp-FrontendForDev"
+              ><li class="tag__item">
+                <i class="fas fa-tag mr-2"></i>Repo Link
+              </li></a
+            >
+          </ul>
+        </div>
+      </article>
+
+      <article class="postcard light blue">
+        <a class="postcard__img_link" href="./assets/movie rate.gif">
+          <img
+            class="postcard__img"
+            src="./assets/movie rate.gif"
+            alt="e-com king"
+          />
+        </a>
+        <div class="postcard__text t-dark">
+          <a href="https://movies-rating-reviews-react.vercel.app/"
+            ><h1 class="postcard__title blue">Movies Ratings & Reviews</h1></a
+          >
+          <div class="postcard__subtitle small">
+            REACT, JS, TAILWIND, API, FIREBASE
+          </div>
+          <div class="postcard__bar"></div>
+          <div class="postcard__preview-txt">
+            In this project, Firebase architecture has been utilized for initial
+            registration and login processes. To access film details and enter
+            the page, logging in is required. The information is retrieved from
+            an API, and the logo has been created by me using Photoshop. What's
+            used in this app? React, Redux, Vite, MUI, Axios, Vercel, Firebase
+          </div>
+          <ul class="postcard__tagbox">
+            <a href="https://github.com/ekrem18/movies_rates_reviews_app_react"
+              ><li class="tag__item">
+                <i class="fas fa-tag mr-2"></i>Repo Link
+              </li></a
+            >
+          </ul>
+        </div>
+      </article>
+
+      <article class="postcard light blue">
+        <a class="postcard__img_link" href="./assets/stock app.gif">
+          <img
+            class="postcard__img"
+            src="./assets/stock app.gif"
+            alt="e-com king"
+          />
+        </a>
+        <div class="postcard__text t-dark">
+          <a
+            href="https://ekrem18-e-com-king-stock-app-frontend-for-dev.vercel.app/ "
+            ><h1 class="postcard__title blue">e-com King</h1></a
+          >
+          <div class="postcard__subtitle small">MERN Stack</div>
+          <div class="postcard__bar"></div>
+          <div class="postcard__preview-txt">
+            📌The backend and frontend parts of this project have been developed
+            by me and the project can be described as an admin panel intended
+            for e-commerce use. It is built upon 8 different models. 📌As a
+            seller, you can create an account, make purchases and sales from
+            registered companies, brands, and products. You can also have
+            real-time visibility into stock tracking. 📌JWT is used for
+            encryption. 📌A permission system is established for
+            editing/changing something about system. 📌Logging is implemented.
+            📌If you want to read the API documentation and check the structure,
+            Swagger and Redoc documents are also available. To access them, you
+            can follow the '/redoc' or '/swagger' routes. 📌The profit and loss
+            statement seen on the homepage dynamically changes based on the
+            current information received from the backend, and it is not static.
+            📌The logo has been designed by me using Photoshop.
+          </div>
+          <ul class="postcard__tagbox">
+            <a
+              href="https://github.com/ekrem18/e-com-King-StockApp-FrontendForDev"
+              ><li class="tag__item">
+                <i class="fas fa-tag mr-2"></i>Repo Link
+              </li></a
+            >
+          </ul>
+        </div>
+      </article>
+
+      <article class="postcard light blue">
+        <a class="postcard__img_link" href="./assets/stock app.gif">
+          <img
+            class="postcard__img"
+            src="./assets/stock app.gif"
+            alt="e-com king"
+          />
+        </a>
+        <div class="postcard__text t-dark">
+          <a
+            href="https://ekrem18-e-com-king-stock-app-frontend-for-dev.vercel.app/ "
+            ><h1 class="postcard__title blue">e-com King</h1></a
+          >
+          <div class="postcard__subtitle small">MERN Stack</div>
+          <div class="postcard__bar"></div>
+          <div class="postcard__preview-txt">
+            📌The backend and frontend parts of this project have been developed
+            by me and the project can be described as an admin panel intended
+            for e-commerce use. It is built upon 8 different models. 📌As a
+            seller, you can create an account, make purchases and sales from
+            registered companies, brands, and products. You can also have
+            real-time visibility into stock tracking. 📌JWT is used for
+            encryption. 📌A permission system is established for
+            editing/changing something about system. 📌Logging is implemented.
+            📌If you want to read the API documentation and check the structure,
+            Swagger and Redoc documents are also available. To access them, you
+            can follow the '/redoc' or '/swagger' routes. 📌The profit and loss
+            statement seen on the homepage dynamically changes based on the
+            current information received from the backend, and it is not static.
+            📌The logo has been designed by me using Photoshop.
+          </div>
+          <ul class="postcard__tagbox">
+            <a
+              href="https://github.com/ekrem18/e-com-King-StockApp-FrontendForDev"
+              ><li class="tag__item">
+                <i class="fas fa-tag mr-2"></i>Repo Link
+              </li></a
+            >
+          </ul>
+        </div>
+      </article>
+    </div>
+  </section>
 </html>
