--- a/projects.html
+++ b/projects.html
@@ -4,10 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/styleprojects.css" />
+    <link rel="stylesheet" href="./style/bootstrap.min.css">
     <title>Projects</title>
   </head>
   <section class="light">
     <div class="container py-2">
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button
+              type="button"
+              class="navbar-toggle collapsed"
+              data-toggle="collapse"
+              data-target="#bs-example-navbar-collapse-1"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="./index.html">
+              <img alt="Brand" src="./assets/Untitled-1.jpg" id="logoImg" />
+            </a>
+          </div>
+  
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="photography.html">Photography</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="about.html">About Me</a></li>
+            </ul>
+          </div>
+          <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+      </nav>
       <div class="h1 text-center text-dark" id="pageHeaderTitle">
         Last 4 Projects
       </div>
@@ -59,7 +94,7 @@
           <img
             class="postcard__img"
             src="./assets/movie rate.gif"
-            alt="e-com king"
+            alt="movie rating"
           />
         </a>
         <div class="postcard__text t-dark">
@@ -88,39 +123,34 @@
       </article>
 
       <article class="postcard light blue">
-        <a class="postcard__img_link" href="./assets/stock app.gif">
+        <a class="postcard__img_link" href="./assets/library.gif">
           <img
             class="postcard__img"
-            src="./assets/stock app.gif"
-            alt="e-com king"
+            src="/assets/library.gif"
+            alt="Online Bookshop & Library"
           />
         </a>
         <div class="postcard__text t-dark">
-          <a
-            href="https://ekrem18-e-com-king-stock-app-frontend-for-dev.vercel.app/ "
-            ><h1 class="postcard__title blue">e-com King</h1></a
+          <a href="https://library-page-react.vercel.app/ "
+            ><h1 class="postcard__title blue">Online Bookshop & Library</h1></a
           >
-          <div class="postcard__subtitle small">MERN Stack</div>
+          <div class="postcard__subtitle small">
+            REACT, JS, STYLED COMP, API
+          </div>
           <div class="postcard__bar"></div>
           <div class="postcard__preview-txt">
-            📌The backend and frontend parts of this project have been developed
-            by me and the project can be described as an admin panel intended
-            for e-commerce use. It is built upon 8 different models. 📌As a
-            seller, you can create an account, make purchases and sales from
-            registered companies, brands, and products. You can also have
-            real-time visibility into stock tracking. 📌JWT is used for
-            encryption. 📌A permission system is established for
-            editing/changing something about system. 📌Logging is implemented.
-            📌If you want to read the API documentation and check the structure,
-            Swagger and Redoc documents are also available. To access them, you
-            can follow the '/redoc' or '/swagger' routes. 📌The profit and loss
-            statement seen on the homepage dynamically changes based on the
-            current information received from the backend, and it is not static.
-            📌The logo has been designed by me using Photoshop.
+            Firstly, coffee tones were chosen to evoke the ambiance of a
+            bookstore and the scent of books. These colors are primarily derived
+            from the prominent hues in the background book image. Adobe Color
+            Wheel was employed in the selection process. Book information is
+            fetched from the API, and to access details, registration/login is
+            required. The characters seen on the About page and the registration
+            page are created with AI assistance, inspired by the bookworm
+            concept. The logo was personally designed by me using Photoshop.
+            What's used in this app? React, Context, Router, Styled Component
           </div>
           <ul class="postcard__tagbox">
-            <a
-              href="https://github.com/ekrem18/e-com-King-StockApp-FrontendForDev"
+            <a href="https://github.com/ekrem18/Online-Bookshop-Library-React"
               ><li class="tag__item">
                 <i class="fas fa-tag mr-2"></i>Repo Link
               </li></a
@@ -130,39 +160,31 @@
       </article>
 
       <article class="postcard light blue">
-        <a class="postcard__img_link" href="./assets/stock app.gif">
+        <a class="postcard__img_link" href="./assets/concert.gif">
           <img
             class="postcard__img"
-            src="./assets/stock app.gif"
-            alt="e-com king"
+            src="./assets/concert.gif"
+            alt="Concert Ticket Project"
           />
         </a>
         <div class="postcard__text t-dark">
-          <a
-            href="https://ekrem18-e-com-king-stock-app-frontend-for-dev.vercel.app/ "
-            ><h1 class="postcard__title blue">e-com King</h1></a
+          <a href="https://concert-ticket-app-react.vercel.app/"
+            ><h1 class="postcard__title blue">Concert Ticket Project</h1></a
           >
-          <div class="postcard__subtitle small">MERN Stack</div>
+          <div class="postcard__subtitle small">
+            REACT, HTML, CSS, JAVASCRİPT
+          </div>
           <div class="postcard__bar"></div>
           <div class="postcard__preview-txt">
-            📌The backend and frontend parts of this project have been developed
-            by me and the project can be described as an admin panel intended
-            for e-commerce use. It is built upon 8 different models. 📌As a
-            seller, you can create an account, make purchases and sales from
-            registered companies, brands, and products. You can also have
-            real-time visibility into stock tracking. 📌JWT is used for
-            encryption. 📌A permission system is established for
-            editing/changing something about system. 📌Logging is implemented.
-            📌If you want to read the API documentation and check the structure,
-            Swagger and Redoc documents are also available. To access them, you
-            can follow the '/redoc' or '/swagger' routes. 📌The profit and loss
-            statement seen on the homepage dynamically changes based on the
-            current information received from the backend, and it is not static.
-            📌The logo has been designed by me using Photoshop.
+            A vibrant and dynamic impact is created through the application of a
+            colorful theme. Selecting an artist and entering their name and date
+            opens a ticket section below. Double-tapping triggers a 'had fun'
+            note. The prominently displayed large font on the page is designed
+            using the AI's speaker tool to harmonize with the theme. What's used
+            in this app? React, JS, HTML, CSS
           </div>
           <ul class="postcard__tagbox">
-            <a
-              href="https://github.com/ekrem18/e-com-King-StockApp-FrontendForDev"
+            <a href="https://github.com/ekrem18/Online-Bookshop-Library-React"
               ><li class="tag__item">
                 <i class="fas fa-tag mr-2"></i>Repo Link
               </li></a
