--- a/photography.html
+++ b/photography.html
@@ -21,11 +21,12 @@
     <section class="gallery-block compact-gallery">
         <div class="container">
             <div class="heading">
-                <h2>
+                <p>
                     
-Click here to access the full portfolio.
-                </h2>
-                <hr class="hr">
+                    <a href="https://www.instagram.com/ekrem_yilmazturk/">Click </a> here to access the full portfolio.
+
+                </p>
+                
             </div>
             <div class="row no-gutters">
                 <div class="col-md-6 col-lg-4 item zoom-on-hover">
