--- a/projects.html
+++ b/projects.html
@@ -8,41 +8,42 @@
     <title>Projects</title>
   </head>
   <section class="light">
-    <div class="container py-2">
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button
-              type="button"
-              class="navbar-toggle collapsed"
-              data-toggle="collapse"
-              data-target="#bs-example-navbar-collapse-1"
-              aria-expanded="false"
-            >
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="./index.html">
-              <img alt="Brand" src="./assets/Untitled-1.jpg" id="logoImg" />
-            </a>
-          </div>
-  
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="projects.html">Projects</a></li>
-              <li><a href="photography.html">Photography</a></li>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="about.html">About Me</a></li>
-            </ul>
-          </div>
-          <!-- /.navbar-collapse -->
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button
+            type="button"
+            class="navbar-toggle collapsed"
+            data-toggle="collapse"
+            data-target="#bs-example-navbar-collapse-1"
+            aria-expanded="false"
+          >
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">
+            <img alt="Brand" src="./assets/Untitled-1.jpg" id="logoImg" />
+          </a>
         </div>
-        <!-- /.container-fluid -->
-      </nav>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="photography.html">Photography</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="about.html">About Me</a></li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container-fluid -->
+    </nav>
+    <div class="container py-2">
+      
       <div class="h1 text-center text-dark" id="pageHeaderTitle">
         Last 4 Projects
       </div>
@@ -63,20 +64,20 @@
           <div class="postcard__subtitle small">MERN Stack</div>
           <div class="postcard__bar"></div>
           <div class="postcard__preview-txt">
-            📌The backend and frontend parts of this project have been developed
+            The backend and frontend parts of this project have been developed
             by me and the project can be described as an admin panel intended
-            for e-commerce use. It is built upon 8 different models. 📌As a
+            for e-commerce use. It is built upon 8 different models. As a
             seller, you can create an account, make purchases and sales from
             registered companies, brands, and products. You can also have
-            real-time visibility into stock tracking. 📌JWT is used for
-            encryption. 📌A permission system is established for
-            editing/changing something about system. 📌Logging is implemented.
-            📌If you want to read the API documentation and check the structure,
+            real-time visibility into stock tracking. JWT is used for
+            encryption. A permission system is established for
+            editing/changing something about system. Logging is implemented.
+            If you want to read the API documentation and check the structure,
             Swagger and Redoc documents are also available. To access them, you
-            can follow the '/redoc' or '/swagger' routes. 📌The profit and loss
+            can follow the '/redoc' or '/swagger' routes. The profit and loss
             statement seen on the homepage dynamically changes based on the
             current information received from the backend, and it is not static.
-            📌The logo has been designed by me using Photoshop.
+            The logo has been designed by me using Photoshop.
           </div>
           <ul class="postcard__tagbox">
             <a
