--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style/bootstrap.min.css">
     <title>Projects</title>
   </head>
-  <section class="light">
+  <section class="lightTTTTT">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
