--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </section>
 
     <footer class="footer p-3">
-      <h3 class="footerText "> Ekrem Yılmaztürk &COPY 2024 </h3>
+      <h3 class="footerText "> Ekrem Yılmaztürk Portfolio V.01 PixelStyle &COPY 2024 </h3>
     </footer>
     
   </body>
