--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/" />
+    <link rel="stylesheet" href="./style/styleabout.css" />
     <link rel="stylesheet" href="./style/bootstrap.min.css">
     <title>About</title>
   </head>
@@ -54,13 +54,12 @@
           
             <!-- <h1 class="postcard__title blue">Color Palette</h1> -->
           
-          <div>
-            <!-- <img src="./assets/aboutme.jpg" alt=""> -->
+          <div class="aboutphoto">
+            <img class="" src="./assets/aboutme.jpg" alt="" style="height: 400px;">
           </div>
           <div class="postcard__bar"></div>
           <div class="postcard__preview-txt"  id="postPreview">
-            You can find below the color palettes I looked at for inspiration to use in my projects. While our projects may have creative ideas, it is essential to choose the right colors to present them beautifully. With the right color selection, we can not only influence the customer's mood but also enhance the product's appeal. More importantly, harmony, contrast, and trend tracking are crucial for a better end-user experience.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id optio mollitia molestiae, inventore vitae repellat asperiores repellendus delectus enim pariatur odit doloribus. Dolorum alias deserunt mollitia accusantium incidunt illum sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus veniam, adipisci, rerum porro error, unde officiis nostrum explicabo illum modi quasi eius sed. Culpa veniam sint commodi a, reiciendis ullam.
+            For the past 8 years, I've been self-employed and managed to sustain myself. Looking ahead, I've decided to venture into software development, aiming to combine my hobbies with a viable career plan. I have experience with various languages and technologies like React, JavaScript, Next.js, TypeScript, Bootstrap, Tailwind, Express.js, and Node.js. Recently, I worked as a backend developer on a project for a manufacturing company, overseeing their stock, production, orders, and shipments. I enjoy photography from all perspectives, whether it's aerial, ground-based, or 360-degree. And of course, I can't forget to mention my beloved motorcycle, as well as my role as a psychological counselor:).
           </div>
           <!-- <ul class="postcard__tagbox">
             <a
