--- a/photography.html
+++ b/photography.html
@@ -8,11 +8,12 @@
     <title>
         Photography
     </title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
+    <!-- <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" /> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css" />
     <link rel="stylesheet" href="./style/stylephotography.css">
     <link rel="stylesheet" href="./style/bootstrap.min.css" />
+    <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet">
 </head>
 
 <body>
