--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="./style/style.css" />
 <link rel="stylesheet" href="./style/bootstrap.min.css" />
+<link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet">
+                
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -25,8 +27,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
-            <img alt="Brand" src="./assets/Untitled-1.jpg" id="logoImg" />
+          <a class="navbar-brand" href="./index.html">
+            <img alt="Brand" src="./assets/logo.png" id="logoImg" />
           </a>
         </div>
 
