--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/styleprojects.css" />
     <link rel="stylesheet" href="./style/bootstrap.min.css">
+    <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet">
     <title>Projects</title>
   </head>
   <section class="lightTTTTT">
@@ -24,8 +25,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
-            <img alt="Brand" src="./assets/Untitled-1.jpg" id="logoImg" />
+          <a class="navbar-brand" href="./index.html">
+            <img alt="Brand" src="./assets/logo.png" id="logoImg" />
           </a>
         </div>
 
