--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <nav class="navbar navbar-default">
-      <div class="container-fluid">
+      <div class="navo container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button
