--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
   </head>
   <section class="lightTTTTT">
     <nav class="navbar navbar-default">
-      <div class="container-fluid">
+      <div class="navo container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button
@@ -30,7 +30,6 @@
           </a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="projects.html">Projects</a></li>
@@ -39,9 +38,8 @@
             <li><a href="about.html">About Me</a></li>
           </ul>
         </div>
-        <!-- /.navbar-collapse -->
+  
       </div>
-      <!-- /.container-fluid -->
     </nav>
     <div class="container py-2">
       
@@ -196,4 +194,6 @@
       </article>
     </div>
   </section>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </html>
