--- a/about.html
+++ b/about.html
@@ -57,11 +57,11 @@
             <!-- <h1 class="postcard__title blue">Color Palette</h1> -->
           
           <div class="aboutphoto">
-            <img class="" src="./assets/aboutme.jpg" alt="" style="height: 400px;">
+            <img class="" src="./assets/aboutme.jpg" alt="" style="height: 350px;">
           </div>
           <div class="postcard__bar"></div>
           <div class="postcard__preview-txt"  id="postPreview">
-            For the past 8 years, I've been self-employed and managed to sustain myself. Looking ahead, I've decided to venture into software development, aiming to combine my hobbies with a viable career plan. I have experience with various languages and technologies like React, JavaScript, Next.js, TypeScript, Bootstrap, Tailwind, Express.js, and Node.js. Recently, I worked as a backend developer on a project for a manufacturing company, overseeing their stock, production, orders, and shipments. I enjoy photography from all perspectives, whether it's aerial, ground-based, or 360-degree. And of course, I can't forget to mention my beloved motorcycle, as well as my role as a psychological counselor:).
+            For the past 8 years, I've been self-employed and managed to sustain myself. Looking ahead, I've decided to venture into software development, aiming to combine my hobbies with a viable career plan. I have experience with various languages and technologies like React, JavaScript, Next.js, TypeScript, Bootstrap, Tailwind, Express.js, and Node.js. Recently, I worked as a backend developer on a project for a manufacturing company. I enjoy photography from all perspectives, whether it's aerial, ground-based, or 360-degree. And of course, I can't forget to mention my beloved motorcycle, as well as my role as a psychological counselor:).
           </div>
           <!-- <ul class="postcard__tagbox">
             <a
