--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ekrem YILMAZTURK Portfolio</title>
+    
   </head>
 
   <body>
-    <nav class="navbar navbar-default">
-      <div class="navo container-fluid">
+    
+    <nav class="navbar navbar-default ">
+      <div class="navo container-fluid ">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
+        <div class="navbar-header ">
           <button
             type="button"
             class="navbar-toggle collapsed"
@@ -34,9 +36,9 @@
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="projects.html">Projects</a></li>
+        <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1 ">
+          <ul class="nav navbar-nav navbar-right ">
+            <li><a href="projects.html" >Projects</a></li>
             <li><a href="photography.html">Photography</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="about.html">About Me</a></li>
@@ -94,7 +96,7 @@
     <!--**********Accounts Section************-->
     <section id="accounts" class="container text-center">
       <div>
-        <h1>My Accounts</h1>
+        <h1 style="color: black;">My Accounts</h1>
       </div>
 
       <div class="row mt-1 d-flex">
@@ -157,7 +159,7 @@
     </section>
 
     <footer class="footer p-3">
-      <h3 class="footerText">
+      <h3 style="color: black;" class="footerText">
         Ekrem YILMAZTURK Portfolio V.01 PixelStyle &COPY 2024
       </h3>
     </footer>
