--- a/blog.html
+++ b/blog.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/styleprojects.css" />
+    <link rel="stylesheet" href="./style/styleblogs.css" />
     <link rel="stylesheet" href="./style/bootstrap.min.css">
     <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet">
                 
     <title>Blog</title>
   </head>
-  <section class="">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
+  <section class="sectionn">
+    <nav class="navbar  navbar-default">
+      <div class="navo container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button
