--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
     
     <title>About</title>
   </head>
-  <section class="">
+  <section class="sectionn">
     <nav class="navbar navbar-default">
-      <div class="container-fluid">
+      <div class="navo container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button
