--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             <!-- <h1 class="postcard__title blue">Color Palette</h1> -->
           
           <div class="aboutphoto">
-            <img class="" src="./assets/aboutme.jpg" alt="" style="height: 350px;">
+            <img class="" src="./assets/Untitled-2.jpg" alt="" style="height: 350px;">
           </div>
           <div class="postcard__bar"></div>
           <div class="postcard__preview-txt"  id="postPreview">
