--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/styleprojects.css" />
-    <link rel="stylesheet" href="./style/bootstrap.min.css">
-    <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet">
+    <link rel="stylesheet" href="./style/bootstrap.min.css" />
+    <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet" />
     <title>Projects</title>
   </head>
   <section class="lightTTTTT">
@@ -38,11 +38,9 @@
             <li><a href="about.html">About Me</a></li>
           </ul>
         </div>
-  
       </div>
     </nav>
     <div class="container py-2">
-      
       <div class="h1 text-center text-dark" id="pageHeaderTitle">
         Last 4 Projects
       </div>
@@ -69,22 +67,21 @@
             seller, you can create an account, make purchases and sales from
             registered companies, brands, and products. You can also have
             real-time visibility into stock tracking. JWT is used for
-            encryption. A permission system is established for
-            editing/changing something about system. Logging is implemented.
-            If you want to read the API documentation and check the structure,
-            Swagger and Redoc documents are also available. To access them, you
-            can follow the '/redoc' or '/swagger' routes. The profit and loss
-            statement seen on the homepage dynamically changes based on the
-            current information received from the backend, and it is not static.
-            The logo has been designed by me using Photoshop.
+            encryption. A permission system is established for editing/changing
+            something about system. Logging is implemented. If you want to read
+            the API documentation and check the structure, Swagger and Redoc
+            documents are also available. To access them, you can follow the
+            '/redoc' or '/swagger' routes. The profit and loss statement seen on
+            the homepage dynamically changes based on the current information
+            received from the backend, and it is not static. The logo has been
+            designed by me using Photoshop.
           </div>
           <ul class="postcard__tagbox">
-            <a
-              href="https://github.com/ekrem18/e-com-King-StockApp-FrontendForDev"
-              ><li class="tag__item">
+            <a href="https://github.com/ekrem18/e-com-King-StockApp-FrontendForDev">
+              <li class=" tag__item">
                 <i class="fas fa-tag mr-2"></i>Repo Link
-              </li></a
-            >
+              </li>
+            </a>
           </ul>
         </div>
       </article>
